--- a/Dicionarios.ipynb
+++ b/Dicionarios.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOO2We0uoiUVXwdVI/3ax6y",
+      "authorship_tag": "ABX9TyOo5QCUe2k8SerbQYHqJ0Rb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,9 +46,10 @@
       },
       "outputs": [],
       "source": [
-        "\n",
+        "# Dicionário que guarda os alunos\n",
         "alunos = {}\n",
         "\n",
+        "# Loop principal\n",
         "while True:\n",
         "    print(\"\\n--- MENU DE ALUNOS ---\")\n",
         "    print(\"1 - Cadastrar aluno\")\n",
@@ -58,26 +59,33 @@
         "\n",
         "    opcao = input(\"Escolha: \")\n",
         "\n",
+        "    # Cadastrar aluno\n",
         "    if opcao == \"1\":\n",
-        "        nome = input(\"Nome: \")\n",
-        "        nota = float(input(\"Nota: \"))\n",
+        "        nome = input(\"Nome do aluno: \")\n",
+        "        nota = float(input(\"Nota do aluno: \"))\n",
         "        alunos[nome] = nota\n",
         "        print(\"Aluno cadastrado!\")\n",
         "\n",
+        "    # Listar alunos\n",
         "    elif opcao == \"2\":\n",
-        "        print(\"\\nAlunos:\")\n",
+        "        print(\"\\nLista de alunos:\")\n",
         "        for nome, nota in alunos.items():\n",
         "            print(f\"{nome}: {nota}\")\n",
         "\n",
+        "    # Buscar aluno\n",
         "    elif opcao == \"3\":\n",
-        "        nome = input(\"Nome do aluno: \")\n",
-        "        print(alunos.get(nome, \"Aluno não encontrado.\"))\n",
+        "        nome = input(\"Digite o nome do aluno: \")\n",
+        "        if nome in alunos:\n",
+        "            print(f\"Aluno encontrado: {nome} — Nota: {alunos[nome]}\")\n",
+        "        else:\n",
+        "            print(\"Aluno não encontrado.\")\n",
         "\n",
+        "    # Sair\n",
         "    elif opcao == \"4\":\n",
         "        break\n",
         "\n",
         "    else:\n",
-        "        print(\"Opção inválida!\")"
+        "        print(\"Opção inválida.\")\n"
       ]
     }
   ]
